# gitta

./: LICENSE  README.md  pyproject.toml
gita/: __init__.py  constants.py  main.py
gita/ai/: __init__.py  client.py  prompts.py
gita/cli/: add.py  commit.py  confirm.py  doctor.py  init.py  ship.py
gita/config/: __init__.py  settings.py  storage.py
gita/core/: __init__.py  commit_service.py  generator.py
gita/git/: diff.py  repository.py
gita/utils/: console.py  editor.py  errors.py  loading.py
gitta/: __init__.py  constants.py  main.py
gitta/ai/: client.py  prompts.py
gitta/cli/: __init__.py  add.py  branch.py  commit.py  config.py  confirm.py  doctor.py  explain.py  init.py  log.py  merge.py  pr.py  ship.py
gitta/config/: settings.py  storage.py
gitta/core/: commit_service.py  generator.py
gitta/git/: __init__.py  diff.py  diff_parser.py  repository.py
gitta/utils/: __init__.py  console.py  editor.py
