[project]
name = "gitta"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "keyring>=25.7.0",
    "openai>=2.21.0",
    "rich>=14.3.2",
    "tomli-w>=1.2.0",
    "typer>=0.23.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
gitta = "gitta.main:app"
